[tool.poetry]
name = "docker-stubs"
version = "0.1.1a0"
description = "Stubs package for the Python Docker API."
authors = ["Robbie Dozier <rdozier@mimsoftware.com>"]
readme = "README.md"
packages = [{include = "docker-stubs"}]

[tool.poetry.dependencies]
python = "^3.8"
types-requests = "^2.31.0.20240406"
typing-extensions = "^4.11.0"
types-urllib3 = "^1.26.25.14"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.10.0"
requests = "^2.31.0"

[tool.mypy]
show_column_numbers = true
strict = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
